log
Thu 21 Mar 2024 11:13:07 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
cd403b2
Thu 21 Mar 2024 11:44:51 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:14: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
   49 |        *dato = i;
      |        ~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
809c7d2
Thu 21 Mar 2024 11:46:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
66ef00f
Thu 21 Mar 2024 11:50:34 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
572901d
Thu 21 Mar 2024 11:50:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a4d6d0c
Thu 21 Mar 2024 11:51:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
dc39e4c
Thu 21 Mar 2024 11:52:38 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:21: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Werror=int-conversion]
   52 |        pushFront(L, valor);
      |                     ^~~~~
      |                     |
      |                     int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘int’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
771411f
Thu 21 Mar 2024 11:53:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:20: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   50 |        int valor = dato;
      |                    ^~~~
exercises.c:52:21: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Werror=int-conversion]
   52 |        pushFront(L, valor);
      |                     ^~~~~
      |                     |
      |                     int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘int’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
1008969
Thu 21 Mar 2024 11:57:26 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
827c6ea
Fri 22 Mar 2024 12:01:32 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e456cf0
Fri 22 Mar 2024 12:07:16 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
1b99302
Fri 22 Mar 2024 12:14:04 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
94f40e5
Fri 22 Mar 2024 12:14:51 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
403d210
Fri 22 Mar 2024 12:16:54 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
73f7260
Fri 22 Mar 2024 12:17:46 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
12c09b7
Fri 22 Mar 2024 12:17:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
c82f531
Fri 22 Mar 2024 12:18:18 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
712c9a7
Fri 22 Mar 2024 12:37:56 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
7076593
Fri 22 Mar 2024 12:41:08 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:127:10: error: unused variable ‘P’ [-Werror=unused-variable]
  127 |   Stack* P = create_stack();
      |          ^
cc1: all warnings being treated as errors
Compilation failed
519b0eb
Fri 22 Mar 2024 12:41:15 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
71bc8b1
Fri 22 Mar 2024 12:42:49 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
91493e3
Fri 22 Mar 2024 12:52:58 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
e33bb61
Fri 22 Mar 2024 12:56:06 AM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 60/70
c7ec4bb
Fri 22 Mar 2024 12:57:46 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
0b1414e
Fri 22 Mar 2024 01:04:45 AM UTC: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:131:3: error: expected identifier or ‘(’ before ‘for’
  131 |   for (int i = 0; i < strlen(cadena); i++)
      |   ^~~
exercises.c:131:19: error: ‘i’ undeclared (first use in this function)
  131 |   for (int i = 0; i < strlen(cadena); i++)
      |                   ^
exercises.c:131:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:131:42: error: expected ‘;’ before ‘)’ token
  131 |   for (int i = 0; i < strlen(cadena); i++)
      |                                          ^
      |                                          ;
exercises.c:131:42: error: expected statement before ‘)’ token
exercises.c:138:9: error: ‘dato’ undeclared (first use in this function)
  138 |         dato = top(P);
      |         ^~~~
exercises.c:155:1: error: control reaches end of non-void function [-Werror=return-type]
  155 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1ef3571
Fri 22 Mar 2024 01:05:25 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:141:40: error: comparison between pointer and integer [-Werror]
  141 |       else if (cadena[i] == ')'&& dato == '(')
      |                                        ^~
exercises.c:143:40: error: comparison between pointer and integer [-Werror]
  143 |       else if (cadena[i] == '}'&& dato == '{')
      |                                        ^~
exercises.c:145:40: error: comparison between pointer and integer [-Werror]
  145 |       else if (cadena[i] == ']'&& dato == '[')
      |                                        ^~
exercises.c:145:32: error: ‘dato’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  145 |       else if (cadena[i] == ']'&& dato == '[')
      |                ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
837877a
Fri 22 Mar 2024 01:09:34 AM UTC: 
 exercises.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
 tests:  7|1
total_score: 60/70
10b1c87
